crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI002_PYI002.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI002 `if` test must be a simple comparison against `sys.platform` or `sys.version_info`
 --> PYI002.pyi:3:4
  |
3 | if sys.version == 'Python 2.7.10': ...  # Y002 If test must be a simple comparison against sys.platform or sys.version_info
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

PYI002 `if` test must be a simple comparison against `sys.platform` or `sys.version_info`
 --> PYI002.pyi:4:4
  |
4 | if 'linux' == sys.platform: ...  # Y002 If test must be a simple comparison against sys.platform or sys.version_info
  |    ^^^^^^^^^^^^^^^^^^^^^^^
  |

PYI002 `if` test must be a simple comparison against `sys.platform` or `sys.version_info`
 --> PYI002.pyi:5:4
  |
5 | if hasattr(sys, 'maxint'): ...  # Y002 If test must be a simple comparison against sys.platform or sys.version_info
  |    ^^^^^^^^^^^^^^^^^^^^^^
  |

PYI002 `if` test must be a simple comparison against `sys.platform` or `sys.version_info`
 --> PYI002.pyi:6:4
  |
6 | if sys.maxsize == 42: ...  # Y002 If test must be a simple comparison against sys.platform or sys.version_info
  |    ^^^^^^^^^^^^^^^^^
  |
