crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI004_PYI004.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI004 Version comparison must use only major and minor version
 --> PYI004.pyi:4:4
  |
4 | if sys.version_info >= (3, 4, 3): ...  # PYI004 
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

PYI004 Version comparison must use only major and minor version
 --> PYI004.pyi:5:4
  |
5 | if sys.version_info < (3, 4, 3): ...  # PYI004 
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

PYI004 Version comparison must use only major and minor version
 --> PYI004.pyi:6:4
  |
6 | if sys.version_info == (3, 4, 3): ...  # PYI004 
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

PYI004 Version comparison must use only major and minor version
 --> PYI004.pyi:7:4
  |
7 | if sys.version_info != (3, 4, 3): ...  # PYI004 
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
