crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI006_PYI006.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI006 Use `<` or `>=` for `sys.version_info` comparisons
 --> PYI006.pyi:8:4
  |
8 | if sys.version_info == (3, 9): ...  # OK
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

PYI006 Use `<` or `>=` for `sys.version_info` comparisons
  --> PYI006.pyi:10:4
   |
10 | if sys.version_info == (3, 9): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

PYI006 Use `<` or `>=` for `sys.version_info` comparisons
  --> PYI006.pyi:12:4
   |
12 | if sys.version_info <= (3, 10): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

PYI006 Use `<` or `>=` for `sys.version_info` comparisons
  --> PYI006.pyi:14:4
   |
14 | if sys.version_info <= (3, 10): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

PYI006 Use `<` or `>=` for `sys.version_info` comparisons
  --> PYI006.pyi:16:4
   |
16 | if sys.version_info > (3, 10): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

PYI006 Use `<` or `>=` for `sys.version_info` comparisons
  --> PYI006.pyi:17:6
   |
17 | elif sys.version_info > (3, 11): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

PYI006 Use `<` or `>=` for `sys.version_info` comparisons
  --> PYI006.pyi:19:4
   |
19 | if python_version > (3, 10): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
   |    ^^^^^^^^^^^^^^^^^^^^^^^^
   |

PYI006 Use `<` or `>=` for `sys.version_info` comparisons
  --> PYI006.pyi:20:6
   |
20 | elif python_version == (3, 11): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
