crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI009_PYI009.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI009 [*] Empty body should contain `...`, not `pass`
 --> PYI009.pyi:3:5
  |
1 | def bar(): ...  # OK
2 | def foo():
3 |     pass  # ERROR PYI009, since we're in a stub file
  |     ^^^^
4 |
5 | class Bar: ...  # OK
  |
help: Replace `pass` with `...`
  |
3 -     pass  # ERROR PYI009, since we're in a stub file
3 +     ...  # ERROR PYI009, since we're in a stub file
  |

PYI009 [*] Empty body should contain `...`, not `pass`
 --> PYI009.pyi:8:5
  |
7 | class Foo:
8 |     pass  # ERROR PYI009, since we're in a stub file
  |     ^^^^
help: Replace `pass` with `...`
  |
8 -     pass  # ERROR PYI009, since we're in a stub file
8 +     ...  # ERROR PYI009, since we're in a stub file
  |
